--- a/articles/35eb9c8e3cc35c.md
+++ b/articles/35eb9c8e3cc35c.md
@@ -177,8 +177,7 @@ localは、VPC内のネットワークをさしています。
 192.168.1.0/24のサブネットはインターネットとつながり、192.168.2.0/24はつながっていない状態になりました。
 ![](/images/route2.png)
 
-外界と通信できないサブネットを作成している理由としては
-外からアクセスできること自体が危険で、 VPC内のネットワークで問題ないものはパブリックにしないほうが安全だからです。
+外界と通信できないサブネットを作成している理由としては、外からアクセスできること自体が危険で、 VPC内のネットワークで問題ないものはパブリックにしないほうが安全だからです。
 つまり、「インターネットから直接アクセスさせたくないもの」はプライベートサブネットに、「インターネットから直接アクセスさせたいもの」はパブリックサブネットに設置する必要があります。
 
 これでやっとインターネットに接続できる状態を構築できました！！
