--- a/articles/35eb9c8e3cc35c.md
+++ b/articles/35eb9c8e3cc35c.md
@@ -3,7 +3,7 @@ title: "OSI参照モデルを調べてみた"
 emoji: "🍰"
 type: "tech" # tech: 技術記事 / idea: アイデア
 topics: ["OSI参照モデル", "ネットワーク", "基本情報技術者試験"]
-published: false
+published: true
 publication_name: "x_point_1"
 ---
 # はじめに
