--- a/articles/40021fb91a6085.md
+++ b/articles/40021fb91a6085.md
@@ -52,19 +52,36 @@ func main() {
 go: no module declaration in go.mod. To specify the module path:
 ```
 
-## Goモジュールの追加
+## Goモジュールについて
 Goモジュールは、Go言語で依存関係を管理するための仕組みです。
 従来の方法では、GOPATHに指定したディレクトリ配下にパッケージをインストールすることで依存関係を解決していましたが、複数のプロジェクトで同一のパッケージを使用する場合に問題がありました。
 そこでGoモジュールでは、**プロジェクトごとに**必要なパッケージを取得し、そのバージョン管理を行うことで、依存関係を解決してくれます。
 
 先ほどのエラーは標準ライブラリであるfmtモジュールをimportしてるのにGoモジュールを導入してなかったから起きたようでした。
-正直Goモジュール周りの理解がまだ曖昧ですが、Pythonでいう`Pipfile`みたいなものかなと思ってます。
-以下のコマンドをプロジェクトのルートディレクトリで実行するとgo.modファイルを作成されます。
+以下のコマンドをプロジェクトのルートディレクトリで実行すると`go.mod`というファイルが作成されます。
 ```
 go mod init example.com/myproject
 ```
+```go:go.mod
+module example.com/myproject
+
+go 1.20
+```
 再度実行するとエラーにならず`Hello, World!` が出力されました。
 
+### 補足：モジュールの追加
+
+外部ライブラリを使用する場合は、`go.mod`にその依存関係を指定する必要があります。
+以下の方法でモジュールを追加できます（`fmt`は標準ライブラリなので今回は何も追加されてません）
+> 1. コードで必要な`import文`を書く
+> 2. `go mod tidy`を叩く
+> 3. 初回だと、`go.sum`ファイルが生成される
+
+ライブラリ、パッケージ、モジュールなどごっちゃになってきたのでちゃんと理解したいです。まだ曖昧です。
+↓参考にした記事を貼っておきます。
+https://osamu-tech-blog.com/go-go-modules/
+https://blog.framinal.life/entry/2021/04/11/013819
+https://zenn.dev/yoonchulkoh/articles/9729d9e1304738
 
 # PythonとGoのパフォーマンス比較
 AtCoderの同じ問題を同じアルゴリズムで解いてます。
