--- a/articles/40021fb91a6085.md
+++ b/articles/40021fb91a6085.md
@@ -3,7 +3,7 @@ title: "Goを始めてみた"
 emoji: "🐀"
 type: "tech" # tech: 技術記事 / idea: アイデア
 topics: [Go, Python, AtCoder]
-published: false
+published: true
 publication_name: "x_point_1"
 ---
 
