--- a/articles/6ad338bf4cf33b.md
+++ b/articles/6ad338bf4cf33b.md
@@ -1,47 +1,112 @@
 ---
-title: "今から受ける人必見！新出題形式の基本情報技術者試験について"
+title: "今から受ける人必見！新制度の基本情報技術者試験合格体験記"
 emoji: "📚"
 type: "idea" # tech: 技術記事 / idea: アイデア
 topics: ["基本情報技術者試験"]
 published: false
-# publication_name: "x_point_1"
+publication_name: "x_point_1"
 ---
-4月上旬に通年受験可能になった基本情報技術者試験を受けてきたので、まだ合格発表されてないですが、これから受ける人への情報共有として記事にしたいと思います。
 
-# 基本情報技術者試験とは
-日本情報処理試験協会が主催する資格試験の一つで、情報技術に関する基本的な知識やスキルを持つことを認定するものです。コンピュータやネットワーク、プログラミング、データベースなど、広い範囲にわたるIT分野の基礎知識を問われます。受験資格は特に設けられておらず、誰でも受験することができます。
-つまり「ITエンジニアの登竜門」です。
-https://www.ipa.go.jp/shiken/kubun/fe.html
+2023年4月から新出題形式になった基本情報技術者試験を受験し、合格したので、これから受ける人への情報共有として記事にしたいと思います。
+
 
 # 旧試験形式との違い
-大きな違いは元々年に2回しか受けることができなかったのが2023年4月からは通年受けることができるようになりました。
 
-## 出題形式
-
-| 変更前 | 変更後 |
-| ----| ---- |
-|**午前試験（小問）**<br>試験時間：150分<br>出題数：80問<br>解答数：80問<br><br>**午後試験 （大問）**<br>試験時間：150分<br>出題数：11問<br>解答数：5問<br><br>**※選択問題あり**|**科目A試験（小問）**<br>試験時間：90分<br>出題数：60問<br>解答数：60問<br><br>**科目B試験（小問）**<br>試験時間：100分<br>出題数：20問<br>解答数：20問<br><br>**※選択問題なし（全問必須）**
-
-## 出題範囲
-
-| 変更前 | 変更後 |
-| ----| ---- |
-|現在の午前試験に準じます。|
-
+詳しくは公式を見るのがいいと思います↓
 https://www.ipa.go.jp/news/2022/shiken/henkou20220425.html
-# 勉強で意識したこと
-選択肢以外の問題の内容も理解して、説明できるレベルになるまで繰り返す、色分け、自信あるのはもうとかない
-8年分くらい過去問といた
-# 試験当日の流れ
-本人確認書類は絶対に忘れない
-軽く書類を書いた
-ロッカーに本人確認書類以外は全て入れる
-自分の持っていった筆記用具は使えない、時計もだめ
-テストセンターに着いた順でテスト開始、途中で終了、休憩10分、使わずにB問題時始められる
-メモ用紙は欲しい時にブザーを鳴らす
-CBT形式最初に使い方のイントロダクションあり、後でチェックするなどの目印が付けられた、残り時間が画面に表示されている
+
+## 通年受験可能になった
+今までは春と秋の年2回しか受験のチャンスがなかったのですが、テストセンターの予約が空いていればいつでも受けられるようになりました。
+
+
+## 試験時間と問題数がコンパクトに
+午前試験はA問題という名称になり、問題数は**80問→60問**に、試験時間も**150分→90分**になりました。
+午後問題はB問題という名称になり、大問の選択形式だったのが**20問**の必須解答に、試験時間も**150分→100分**になりました。
+
+## B問題は大幅改変
+A問題に関しては旧試験と範囲は同じですが、
+B問題は「アルゴリズムとプログラミング」と「情報セキュリティ」の2分野のみになりました。
+20問のうち8割がアルゴリズム、2割がセキュリティと、出題割合も公開されています。
+勉強する範囲が絞られた気がして、ちょっとやる気が出ました！
+
+
+# やったこと
+## A問題はひたすら過去問道場
+
+解説付きのWeb過去問題集です。
+https://www.fe-siken.com/fekakomon.php
+### 1. 分野指定+試験回指定で解く
+分野指定した方が知識が定着しやすく、さらに15-20問程度になるよう試験回を絞ることで継続しやすかったように思います。
+![](/images/fe1.png)
+![](/images/fe2.png)
+
+最終的に全ての分野を解きますが、過去の出題数から頻出なものは重点的に取り組むようにしていました。
+「セキュリティ」はB問題でも出題されるので最重要で、次に「ネットワーク」「データベース」「ソフトウェア」、最終的に過去3年分は全ての問題を、重要な分野は8年分解きました。
+
+
+### 2. 解説+参考書で理解を深める
+最初はほとんど解けないので、解説読んで理解できるようにしました。
+過去問道場の解説は図や絵を用いて分かりやすいのですが、参考書の方が噛み砕いた説明がなされているのでそちらも読むようにしてました。
+以下の２つが有名かと思いますが、分かりやすいと思うものを選べば良さそうです。
+https://www.amazon.co.jp/%E3%82%AD%E3%82%BF%E3%83%9F%E5%BC%8F%E3%82%A4%E3%83%A9%E3%82%B9%E3%83%88IT%E5%A1%BE-%E5%9F%BA%E6%9C%AC%E6%83%85%E5%A0%B1%E6%8A%80%E8%A1%93%E8%80%85-%E4%BB%A4%E5%92%8C05%E5%B9%B4-%E3%81%8D%E3%81%9F%E3%81%BF-%E3%82%8A%E3%82%85%E3%81%86%E3%81%98/dp/4297131862/ref=zg_bs_502776_sccl_7/357-6426251-0113222?psc=1
+
+https://www.amazon.co.jp/%E4%BB%A4%E5%92%8C05%E5%B9%B4-%E3%82%A4%E3%83%A1%E3%83%BC%E3%82%B8%EF%BC%86%E3%82%AF%E3%83%AC%E3%83%90%E3%83%BC%E6%96%B9%E5%BC%8F%E3%81%A7%E3%82%88%E3%81%8F%E3%82%8F%E3%81%8B%E3%82%8B-%E6%A0%A2%E6%9C%A8%E5%85%88%E7%94%9F%E3%81%AE%E5%9F%BA%E6%9C%AC%E6%83%85%E5%A0%B1%E6%8A%80%E8%A1%93%E8%80%85%E6%95%99%E5%AE%A4-%E6%83%85%E5%A0%B1%E5%87%A6%E7%90%86%E6%8A%80%E8%A1%93%E8%80%85%E8%A9%A6%E9%A8%93-%E6%A0%A2%E6%9C%A8-ebook/dp/B0BLYDGS43/ref=zg_bs_502776_sccl_8/357-6426251-0113222?psc=1
+
+
+### ３. 色別チェックを利用する
+過去問道場は機能が豊富で、解いた問題に対して3つの色別でチェックをつけることができます。
+🟩：選択肢全ての説明ができるレベルで自信あり→もう解かない
+🟧：正解は出せたが、他の選択肢で説明ができないものがある
+🟥：不正解
+
+上記で色分けすると後に色ごとに復習ができるので苦手な問題に効率よく取り組むことができました。
+![](/images/fe3.png)
+![](/images/fe4.png)
+
+## 新しくなったB問題は専用テキストを解いた
+
+B問題はプログラムの中や説明文に空欄があり、選択肢を選ぶような形式なのですが、対策なしだと撃沈しました。
+![](/images/fe6.png)
+![](/images/fe7.png)
+
+
+新出題形式に対応している以下の問題集を２周しました。
+
+https://www.amazon.co.jp/%E6%83%85%E5%A0%B1%E5%87%A6%E7%90%86%E6%95%99%E7%A7%91%E6%9B%B8-%E5%87%BA%E3%82%8B%E3%81%A8%E3%81%93%E3%81%A0%E3%81%91%EF%BC%81%E5%9F%BA%E6%9C%AC%E6%83%85%E5%A0%B1%E6%8A%80%E8%A1%93%E8%80%85%EF%BC%BB%E7%A7%91%E7%9B%AEB%EF%BC%BD%E7%AC%AC3%E7%89%88-%E6%A9%8B%E6%9C%AC-%E7%A5%90%E5%8F%B2/dp/4798177679/ref=zg_bs_502776_sccl_5/357-6426251-0113222?psc=1
+
+
+100分で20問は余裕に見えますが、私は問題を理解するのに時間がかかるので1問5分以内で解けるように意識して取り組みました。
+あとは、セキュリティの問題を先に解く、設問と選択肢に先に目を通す、くらいですかね。
+B問題は正直最後まで全然手応えなかったですが、焦らず簡単な問題を落とさないようにしたいなと思ってました。
+
+## サンプル問題は絶対やる
+A問題、B問題とも公式がサンプル問題を公開しているのですがこれは解いてて本当に良かったです。（過去問道場からもアクセス可）
+難易度と傾向が似た問題が試験でも多く出題されたと思います。
+B問題に関しては新制度になってから間がなく練習問題が少ないので、先ほどの問題集とサンプル問題はスムーズに解けるようになっていると安心だと思います。
+
+# 試験受けた人でないと知らないであろうTips
+
+- 本人確認書類は絶対に忘れない
+これがないと受けれません、マイナンバーカード！
+- テストセンターに着いた順でテスト開始
+予約時間は設定されてるのですが早く着いたら早めに始められました
+- A問題→休憩10分→B問題
+A問題とB問題の間に10休憩があるのですがすぐにB問題を解くこともできます。
+A問題が早く終わったらBを解き始めることもできたと思います。
+- ロッカーに本人確認書類以外は全て入れる
+自分の筆記用具は使えない
+時計もだめ、残り時間が画面に表示されている
+メモ用紙もテストセンターから付与
+- メモ用紙は欲しい時にブザーを鳴らす
+1枚ずつしかもらえませんでした
+- CBT形式のイントロダクションあり
+後でチェックするなどの目印が付けられた
+- 終わった瞬間に点数開示
+すぐにA,Bそれぞれ1000点満点の何点か表示され、ビビりました。
+新制度ではIRTという採点方法で問題ごとの配点ではなく解答結果に基づいて配点を算出する仕組みになっているそうですが、この時点で600点取れていたら合格と思って大丈夫だと思います。
+
 # 会社の補助制度について
-受験料を負担してくれる、報奨金もあり
+弊社では各種資格取得に伴う受験料を負担してくれる制度があり、合格すると報奨金ももらえるのでハッピーです！感謝！
+
 # 最後に
-本番の雰囲気とかわかるとちょっと安心する気がする実際に受けたからこそわかる小さなことを共有してみました。
-にしても緊張しました
+試験勉強で幅広いIT知識に触れることができ、業務中に飛び交う言葉で「これ基本情報で聞いたことあるな」となることが増えたので、受けて良かったです。
