--- a/articles/6ad338bf4cf33b.md
+++ b/articles/6ad338bf4cf33b.md
@@ -3,7 +3,7 @@ title: "今から受ける人必見！新制度の基本情報技術者試験合
 emoji: "📚"
 type: "idea" # tech: 技術記事 / idea: アイデア
 topics: ["基本情報技術者試験"]
-published: false
+published: true
 publication_name: "x_point_1"
 ---
 
