--- a/articles/46c7a74dd4d074.md
+++ b/articles/46c7a74dd4d074.md
@@ -3,7 +3,7 @@ title: "Terraform初期設定の備忘録"
 emoji: "💭"
 type: "tech" # tech: 技術記事 / idea: アイデア
 topics: ["terraform"]
-published: false
+published: true
 publication_name: "x_point_1"
 ---
 
