--- a/articles/a849896a547e9b.md
+++ b/articles/a849896a547e9b.md
@@ -4,7 +4,7 @@ emoji: "🧪"
 type: "tech" # tech: 技術記事 / idea: アイデア
 topics: ["Test", "Python", "SQL"]
 published: false
-# publication_name: "x_point_1"
+publication_name: "x_point_1"
 ---
 # はじめに
 開発をしていて、「あれ、テストしにくいな・・・」と思うことがあり、テストしやすくなるようにリファクタリングしてみると、いろいろメリットを感じることができたので共有します！
