--- a/articles/a849896a547e9b.md
+++ b/articles/a849896a547e9b.md
@@ -3,7 +3,7 @@ title: "テストしやすくリファクタリングしたら、いろいろう
 emoji: "🧪"
 type: "tech" # tech: 技術記事 / idea: アイデア
 topics: ["Test", "Python", "SQL"]
-published: false
+published: true
 publication_name: "x_point_1"
 ---
 # はじめに
