--- a/articles/ce5ec69b068e3f.md
+++ b/articles/ce5ec69b068e3f.md
@@ -13,7 +13,7 @@ published: false
 https://qiita.com/advent-calendar/2024/medley
 
 こんにちは、メドレーの人材プラットフォーム本部でエンジニアをしている手嶋です。
-私が開発を担当している[ジョブメドレーアカデミー](https://jm-academy.jp/)では ORM に Prisma を使っています。その Prisma のバージョンアップに取り組んだ時の試行錯誤したことや学びを共有したいと思います
+私が開発を担当している[ジョブメドレーアカデミー](https://jm-academy.jp/)では ORM に Prisma を使っています。その Prisma のバージョンアップに取り組んだ時の試行錯誤したことや学びを共有したいと思います。
 
 # Prisma とは
 
@@ -49,20 +49,134 @@ console.log(result);
 新バージョン: [ { timestamp: 2024-10-01T01:00:00.000Z } ]
 ```
 
-- 前提として？アカデミーでは Prisma のタイムゾーン問題を解決するために、ミドルウェアを使って時差補正していた（いらないと思う）
-  <!-- Prisma は DB 保存時にタイムゾーンを考慮せず UTC で保存されます、よく Prisma の少し扱いにくい点として挙げられますが
-  そのため[issue](https://github.com/prisma/prisma/issues/5051) で言及されている、Prisma の middleware を使って、JST と UTC の時差を吸収するため、DB に渡すデータ(where や data など)に Date 型のものが含まれていれば、それに対して 9 時間プラス、DB から出力されたデータに Date 型のものが含まれていれば、それに対して 9 時間マイナスする -->
+## 調査したこと
 
-## どのように調査したか
+<!-- この 説明で伝わるのか？実際のコードとか詳細が必要だとすると、そのまま載せていいのか-->
+<!-- 前提として、は段落分けた方がいい？ -->
 
-前提として、Prisma で日時を保存すると、DB のタイムゾーン設定に関わらず、UTC 時間 に変換されて保存されてしまいます
+前提として、Prisma で日時を保存すると、DB のタイムゾーン設定に関わらず、UTC 時間 に変換されて保存されてしまいます。そのためジョブメドレーアカデミーでは Prisma の middleware を作成して、DB に渡すデータ(where や data など)に Date 型のものが含まれていれば、それに対して 9 時間プラス、DB から出力されたデータに Date 型のものが含まれていれば、それに対して 9 時間マイナスするようにしています。
+
+```TypeScript
+import { PrismaClient } from '@prisma/client';
+import { addHours, addMinutes, subHours, subMinutes } from 'date-fns';
+import { clone } from 'ramda';
+
+function getTimezoneOffset(): {
+  hours: number;
+  minutes: number;
+} {
+  const date = new Date();
+  const offset = -date.getTimezoneOffset();
+  return {
+    hours: Math.floor(offset / 60),
+    minutes: offset % 60,
+  };
+}
+
+const offset = getTimezoneOffset();
+
+function addTimezoneOffset(date: Date): Date {
+  return addMinutes(addHours(date, offset.hours), offset.minutes);
+}
+
+function subtractTimezoneOffset(date: Date): Date {
+  return subMinutes(subHours(date, offset.hours), offset.minutes);
+}
+
+function isPrimitive(value: unknown): boolean {
+  return (
+    (typeof value !== 'object' && typeof value !== 'function') || value === null
+  );
+}
+
+function recursivelyTransformDateData(
+  obj: Record<string, unknown>,
+  transform: (date: Date) => Date,
+): void {
+  if (!obj) {
+    return;
+  }
+
+  Object.keys(obj).forEach((key) => {
+    const element = obj[key];
+    if (element instanceof Date) {
+      obj[key] = transform(element);
+      return;
+    }
+    if (isPrimitive(element)) {
+      return;
+    }
+    // eslint-disable-next-line @typescript-eslint/no-explicit-any
+    recursivelyTransformDateData(element as any, transform);
+  });
+}
+
+function absorbTimezoneDifference<T>(
+  value: T,
+  transform: (date: Date) => Date,
+): T {
+  if (value instanceof Date) {
+    // eslint-disable-next-line @typescript-eslint/no-explicit-any
+    return transform(value) as any;
+  }
+  if (isPrimitive(value)) {
+    return value;
+  }
+
+  // eslint-disable-next-line @typescript-eslint/no-explicit-any
+  recursivelyTransformDateData(value as any, transform);
+  return value;
+}
+
+// @see: https://github.com/medley-inc/academy/pull/258
+export function applyAbsorbTimezoneDifferenceMiddleware(
+  // eslint-disable-next-line @typescript-eslint/no-explicit-any
+  client: PrismaClient<any>,
+): void {
+  client.$use(async (params, next) => {
+    params.args = absorbTimezoneDifference(
+      clone(params.args),
+      addTimezoneOffset,
+    );
+
+    const result = await next(params);
+
+    return absorbTimezoneDifference(result, subtractTimezoneOffset);
+  });
+}
+```
+
+このため、middleware 内部の処理が新旧バージョンで変化しているかどうか調べるためにログを追加しました。
+
+```TypeScript
+export function applyAbsorbTimezoneDifferenceMiddleware(
+  // eslint-disable-next-line @typescript-eslint/no-explicit-any
+  client: PrismaClient<any>,
+): void {
+  client.$use(async (params, next) => {
+    console.log('absorbTimezoneDifferenceに渡す前のparams.args', params.args);
+    params.args = absorbTimezoneDifference(
+      clone(params.args),
+      addTimezoneOffset,
+    );
+    console.log('absorbTimezoneDifferenceに渡した後のparams.args', params.args);
+    const result = await next(params);
+    console.log('next実行後', result);
+    const result2 = absorbTimezoneDifference(result, subtractTimezoneOffset);
+    console.log('next実行後absorbTimezoneDifferenceの結果', result2);
+    return result2;
+  });
+}
+
+```
 
 - ミドルウェアがおかしいとアタリをつけて、調査したこと書く
   なんでミドルウェアが怪しいと思ったのかも書く
 
 ## 何が原因だったか
 
-調査した結果、ここがこうなってたと書く
+- 調査した結果、ここがこうなってたと書く
+- queryRaw の結果は日付などを文字列で返してたが Date 型を返すようになりミドルウェアの Date 型の分岐に入るようになったから時差が補正されるようになった
 
 ## 対応したこと
 
