--- a/articles/ce5ec69b068e3f.md
+++ b/articles/ce5ec69b068e3f.md
@@ -1,6 +1,6 @@
 ---
-title: 'Prisma バージョンアップの苦労'
-emoji: '🔖'
+title: 'Prismaのタイムゾーン問題とバージョンをあげる時の注意点'
+emoji: '🌏'
 type: 'tech' # tech: 技術記事 / idea: アイデア
 topics: ['prisma']
 published: false
@@ -12,13 +12,9 @@ published: false
 
 https://qiita.com/advent-calendar/2024/medley
 
-こんにちは、メドレーの人材プラットフォーム本部でエンジニアをしている手嶋です。
-私が開発を担当している[ジョブメドレーアカデミー](https://jm-academy.jp/)では ORM に Prisma を使っています。その Prisma のバージョンアップに取り組んだ時の試行錯誤したことや学びを共有したいと思います。
+こんにちは、メドレーの人材プラットフォーム本部でエンジニアをしている手嶋です。私が開発を担当している[ジョブメドレーアカデミー](https://jm-academy.jp/)では、ORM に [Prisma](https://www.prisma.io/) を使用しています。普段はプロダクト改善を目的とした機能開発を担当していますが、今回はプロダクトを支える主要なライブラリである Prisma のバージョンアップに挑戦しました。その際に直面した課題やハマりポイントを共有したいと思います。
 
-# Prisma とは
-
-どういうライブラリなのか書く
-
+<!--
 # バージョンアップ時に気をつけること
 
 今まで、本番コードで使用しているような主要なライブラリのバージョンアップをやった経験がなかったので、どのようなことに気をつけて実施すべきか調べることにしました。
@@ -28,15 +24,31 @@ Prisma は公式ドキュメントに [Upgrade guides](https://www.prisma.io/doc
 
 - リリースノートを読み、Breaking Change（破壊的変更）や、新しくリリースされた機能を確認する
 - リリース直後のバージョンや、x.x.0 は新しいバグが発見される場合があるため、一つ前のバージョンにしておく
-- `prisma` と `@prisma/client` どちらもバージョンを揃える必要がある
+- `prisma` と `@prisma/client` どちらもバージョンを揃える必要がある -->
 
-# 今回のバージョンアップで一番ハマったポイント
+# Prisma のタイムゾーン問題について
+
+今回のバージョンアップでは、Prisma のタイムゾーン問題に対応するための実装が意図しない挙動になっていました。そのため、まずは Prisma のタイムゾーン問題について説明します。
+
+Prisma を使用して日時を保存する場合、DB のタイムゾーン設定が JST であっても、日時データは常に UTC 時間で保存されます。この仕様に関する問題は、約 4 年前から Issue が上がっていますが、2024 年 12 月現在も解決されていない状態です。
+
+https://github.com/prisma/prisma/issues/5051
+
+上記の問題については、本来であれば DB に UTC 時間で保存すれば解決する話です。しかし、ジョブメドレーアカデミーは別の会社から運営を引き継いだ経緯があり、DB 内の日時データがすでに JST 時間で保存されていました。そのため、JST での保存を継続して運用する必要がありました。
+
+## どのように対応しているか
+
+タイムゾーン問題に対しては、先ほど紹介した [issue のコメント](https://github.com/prisma/prisma/issues/5051#issuecomment-878106427)にある実装を参考に対応しています。よく使われているワークアラウンドの一つだと思います。
+
+具体的には、Prisma にデータを渡す際と受け取る際に、 UTC と JST の時差を調整するための [Prisma Middleware](https://www.prisma.io/docs/orm/prisma-client/client-extensions/middleware) を作成しています。
+
+# 今回のバージョンアップで直面した問題
 
 今回は 5.9.1（今年 2 月リリース）からのマイナーバージョンのアップデートだったのもあり、リリースノートを読む限りでは Breaking Change はありませんでした。しかし、いざバージョンを上げてテストを実行すると、日時が関わるテストの一部が失敗するようになりました。
 
 ## 起きた事象： `$queryRaw` で取得した Date 型の値に差が出た
 
-Prisma の `$queryRaw` は生の SQL を実行する関数です。Date 型を値を取得する SQL を`$queryRaw`で実行すると、以下のように新旧バージョンで結果に差が出ました。
+以下のように新旧バージョンで結果に差が出ました。
 
 ```typescript
 const result = await prisma.$queryRaw`
@@ -55,96 +67,6 @@ console.log(result);
 <!-- 前提として、は段落分けた方がいい？ -->
 
 前提として、Prisma で日時を保存すると、DB のタイムゾーン設定に関わらず、UTC 時間 に変換されて保存されてしまいます。そのためジョブメドレーアカデミーでは Prisma の middleware を作成して、DB に渡すデータ(where や data など)に Date 型のものが含まれていれば、それに対して 9 時間プラス、DB から出力されたデータに Date 型のものが含まれていれば、それに対して 9 時間マイナスするようにしています。
-
-```TypeScript
-import { PrismaClient } from '@prisma/client';
-import { addHours, addMinutes, subHours, subMinutes } from 'date-fns';
-import { clone } from 'ramda';
-
-function getTimezoneOffset(): {
-  hours: number;
-  minutes: number;
-} {
-  const date = new Date();
-  const offset = -date.getTimezoneOffset();
-  return {
-    hours: Math.floor(offset / 60),
-    minutes: offset % 60,
-  };
-}
-
-const offset = getTimezoneOffset();
-
-function addTimezoneOffset(date: Date): Date {
-  return addMinutes(addHours(date, offset.hours), offset.minutes);
-}
-
-function subtractTimezoneOffset(date: Date): Date {
-  return subMinutes(subHours(date, offset.hours), offset.minutes);
-}
-
-function isPrimitive(value: unknown): boolean {
-  return (
-    (typeof value !== 'object' && typeof value !== 'function') || value === null
-  );
-}
-
-function recursivelyTransformDateData(
-  obj: Record<string, unknown>,
-  transform: (date: Date) => Date,
-): void {
-  if (!obj) {
-    return;
-  }
-
-  Object.keys(obj).forEach((key) => {
-    const element = obj[key];
-    if (element instanceof Date) {
-      obj[key] = transform(element);
-      return;
-    }
-    if (isPrimitive(element)) {
-      return;
-    }
-    // eslint-disable-next-line @typescript-eslint/no-explicit-any
-    recursivelyTransformDateData(element as any, transform);
-  });
-}
-
-function absorbTimezoneDifference<T>(
-  value: T,
-  transform: (date: Date) => Date,
-): T {
-  if (value instanceof Date) {
-    // eslint-disable-next-line @typescript-eslint/no-explicit-any
-    return transform(value) as any;
-  }
-  if (isPrimitive(value)) {
-    return value;
-  }
-
-  // eslint-disable-next-line @typescript-eslint/no-explicit-any
-  recursivelyTransformDateData(value as any, transform);
-  return value;
-}
-
-// @see: https://github.com/medley-inc/academy/pull/258
-export function applyAbsorbTimezoneDifferenceMiddleware(
-  // eslint-disable-next-line @typescript-eslint/no-explicit-any
-  client: PrismaClient<any>,
-): void {
-  client.$use(async (params, next) => {
-    params.args = absorbTimezoneDifference(
-      clone(params.args),
-      addTimezoneOffset,
-    );
-
-    const result = await next(params);
-
-    return absorbTimezoneDifference(result, subtractTimezoneOffset);
-  });
-}
-```
 
 このため、middleware 内部の処理が新旧バージョンで変化しているかどうか調べるためにログを追加しました。
 
@@ -175,6 +97,7 @@ export function applyAbsorbTimezoneDifferenceMiddleware(
 
 ## 何が原因だったか
 
+- ログの結果をはる
 - 調査した結果、ここがこうなってたと書く
 - queryRaw の結果は日付などを文字列で返してたが Date 型を返すようになりミドルウェアの Date 型の分岐に入るようになったから時差が補正されるようになった
 
@@ -190,3 +113,39 @@ export function applyAbsorbTimezoneDifferenceMiddleware(
 今回ハマったポイントは Prisma のタイムゾーン問題を middleware で解消している場合にのみ起こる事象ですが、参考になれば嬉しいです！
 
 明日は、・・・
+
+言いたいこと
+
+- Prisma のタイムゾーン問題と 5.19.1 にあげる時の注意点
+
+目次
+
+- Prisma のタイムゾーン問題について
+
+  - 一般論
+    - Prisma はタイムゾーンを考慮してくれないから
+    - issue が上がっている、3 年前くらい
+  - アカデミー特有
+    - DB に保存されてる日時は JST で保存してます
+      - 歴史的背景があって、、、
+    - よく使われるワークアラウンドにそって実装してる
+      - Prisma にデータを渡すときともらうときに時差の辻褄を合わせるミドルウェア
+    - 5.9.1 を使っていた、マイナーバージョン大きくあげることになった
+      - 機能開発
+    - ライブラリアップデートしたことなかった
+
+- 起きた事象
+
+  - queryRaw を使って Date 型を取得する処理だけ壊れた
+    - この部分だけ壊れた
+  - このミドルウェアを prisma のバージョンを 5.9.1 -> 5.19.1 上げると意図しない挙動になった
+  - 9 時間だったのミドルウェアが怪しいと思った
+
+- やったこと
+
+  - リリースノートみて queryRaw 周りの変更を確認、breaking change もチェンジログ関係ありそうな変更もない　 → 収穫なし
+    - Prisma のコードベース読むのは難しいので挙動で確認する、部分的だったので
+  - queryRaw が実行されて値が返ってくるまでの流れ確認
+    - 呼び出し -> M -> Prisma -> Pos -> Prisma -> M -> 結果（ここで顕在化）
+    - 呼び出しは何も変えてない
+    - ポスグレはアップデートしてない
