図など追加

--- a/articles/ce5ec69b068e3f.md
+++ b/articles/ce5ec69b068e3f.md
@@ -26,13 +26,56 @@ https://github.com/prisma/prisma/issues/5051
 
 ## どのように対応しているか
 
-タイムゾーン問題に対しては、先ほど紹介した [issue のコメント](https://github.com/prisma/prisma/issues/5051#issuecomment-878106427)を参考に Prisma にデータを渡す際や受け取る際に、 UTC と JST の時差を調整するための [Prisma Middleware](https://www.prisma.io/docs/orm/prisma-client/client-extensions/middleware) を作成しています。これは、よく使われているワークアラウンドの一つだと思います。
+タイムゾーン問題に対しては、 UTC と JST の時差を調整する [Prisma Middleware](https://www.prisma.io/docs/orm/prisma-client/client-extensions/middleware) で対応しています。これは、よく使われているワークアラウンドの一つだと思います。
 
-<!--  middlewareの実装を載せる -->
+以下のコードは先ほど紹介した [issue 内のコメント](https://github.com/prisma/prisma/issues/5051#issuecomment-878106427)から引用しています。
+::::details middleware の実装例
 
-具体的には、DB に渡すデータ(where や data など)に Date 型のものが含まれていれば、それに対して 9 時間プラスする、DB から出力されたデータに Date 型のものが含まれていれば、それに対して 9 時間マイナスするように、Prisma の middleware が辻褄を合わせてくれています。
+```TypeScript
+// Subtract 9 hours from all the Date objects recursively
+function subtract9Hours(obj: Record<string, unknown>) {
+  if (!obj) return
 
-<!-- 9時間のプラスマイナスの関係がわかる図を挿入したい -->
+  for (const key of Object.keys(obj)) {
+    const val = obj[key]
+
+    if (val instanceof Date) {
+      obj[key] = dayjs(val).subtract(9, 'hour').toDate()
+    } else if (!isPrimitive(val)) {
+      subtract9Hours(val as any)
+    }
+  }
+}
+
+function prismaTimeMod<T>(value: T): T {
+  if (value instanceof Date) {
+    return dayjs(value).subtract(9, 'hour').toDate() as any
+  }
+
+  if (isPrimitive(value)) {
+    return value
+  }
+
+  subtract9Hours(value as any)
+
+  return value
+}
+
+// Create a prisma client instance with timemod
+const prisma = new PrismaClient()
+
+prisma.$use(async (params, next) => {
+    const result = await next(params)
+
+    return prismaTimeMod(result)
+})
+```
+
+::::
+ジョブメドレーアカデミーでは上記のコードを参考に、DB に渡すデータ(where や data など)に Date 型のものが含まれていれば、それに対して **9 時間プラス**し、DB から出力されたデータに Date 型のものが含まれていれば、それに対して **9 時間マイナス**するように、Prisma の middleware を実装しています。
+
+イメージとしては以下の図のような感じです。
+![](/images/prisma-upgrade/middleware.png)
 
 # バージョンアップの事前準備
 
@@ -47,7 +90,7 @@ Prisma は公式ドキュメントに [Upgrade guides](https://www.prisma.io/doc
 
 # 今回のバージョンアップで起きた事象
 
-Prisma のバージョンを 5.9.1 -> 5.19.1 にあげると`$queryRaw` で取得した 日時データの値に差が出るようになりました。
+Prisma のバージョンを 5.9.1 から 5.19.1 にあげると`$queryRaw` で取得した 日時データの値に差が出るようになりました。
 
 ```typescript
 const result = await prisma.$queryRaw`
@@ -76,6 +119,8 @@ console.log(result);
 
 `$queryRaw`自体が怪しいのは確からしいので、次は呼び出されてからの起きていることを整理することにしました。呼び出し元や PostgreSQL は今回変更ないはずなので、それ以外で影響が出ていそうな箇所にログを追加しました。
 
+![](/images/prisma-upgrade/flowchart.png =500x)
+
 先ほどの図の`（３）`部分であるクエリ実行結果のログを確認すると 以下のように Prisma のバージョンによって変化していることがわかりました。
 
 ```TypeScript
@@ -98,8 +143,6 @@ const result = await prisma.$queryRaw`
 [ { timestamp: 2024-10-01T10:00:00.000Z } ]
 ```
 
-<!-- 流れ図を挿入 -->
-
 # 何が原因だったか
 
 今回起きた事象は、`$queryRaw`で日時データを取得するクエリを実行した結果が Prisma のバージョンを上げることで文字列型から Date 型に変化し、 middleware 内の 9 時間マイナスしている処理が適応されるようになったことが原因でした。
@@ -110,6 +153,8 @@ const result = await prisma.$queryRaw`
 原因がわかったので、プロダクションコード内で`$queryRaw`で日時データを取得している箇所を確認し修正しました。
 
 また今回のバージョンアップで挙動が変わった箇所を今後も検知できるように以下のようなテストコードを追加しました。
+
+::::details 追加したテストコード
 
 ```TypeScript
 describe('Prisma5.19.1 queryRawのDateオブジェクトに関わる挙動確認', () => {
@@ -174,9 +219,11 @@ describe('Prisma5.19.1 queryRawのDateオブジェクトに関わる挙動確認
 });
 ```
 
+::::
+
 # おわりに
 
 紆余曲折ありましたが、無事 Prisma のバージョンアップができました。
-今回ハマったポイントは Prisma のタイムゾーン問題を middleware で解消している場合にのみ起こる事象ですが、参考になれば嬉しいです！
+今回ハマったポイントは Prisma のタイムゾーン問題を middleware で解消している場合にのみ起こる事象ですが、参考になれば嬉しいです。
 
-明日の Medley（メドレー） Advent Calendar 2024 は[@m-d](https://qiita.com/m-d)さんです。
+明日の Medley（メドレー） Advent Calendar 2024 は[@m-d](https://qiita.com/m-d)さんです。お楽しみに！
