--- a/articles/ce5ec69b068e3f.md
+++ b/articles/ce5ec69b068e3f.md
@@ -12,17 +12,17 @@ published: false
 
 https://qiita.com/advent-calendar/2024/medley
 
-こんにちは、メドレーの人材プラットフォーム本部でエンジニアをしている手嶋です。私が開発を担当している[ジョブメドレーアカデミー](https://jm-academy.jp/)では、ORM に [Prisma](https://www.prisma.io/) を使用しています。普段はプロダクト改善を目的とした機能開発を担当していますが、今回はプロダクトを支える主要なライブラリである Prisma のバージョンアップに挑戦しました。その際に直面した課題やハマりポイントを共有したいと思います。
+こんにちは、メドレーの人材プラットフォーム本部でエンジニアをしている手嶋です。私が開発を担当している[ジョブメドレーアカデミー](https://jm-academy.jp/)では、ORM に [Prisma](https://www.prisma.io/) を使用しています。今回はその Prisma をバージョンアップした際に直面した問題やハマりポイントを共有したいと思います。
 
 # Prisma のタイムゾーン問題について
 
 今回のバージョンアップでは、Prisma のタイムゾーン問題に対応するための実装が意図しない挙動になっていました。そのため、まずは Prisma のタイムゾーン問題について説明します。
 
-Prisma を使用して日時を保存する場合、DB のタイムゾーン設定が JST であっても、日時データは常に UTC 時間で保存されます。この仕様に関する問題は、約 4 年前から Issue が上がっていますが、2024 年 12 月現在も解決されていない状態です。
+Prisma では、日時データは DB のタイムゾーン設定に関係なく常に UTC 時間で保存されます。この仕様に関する問題は、約 4 年前から issue が上がっていますが、2024 年 12 月現在も解決されていません。
 
 https://github.com/prisma/prisma/issues/5051
 
-上記の問題については、本来であれば DB に UTC 時間で保存すれば解決する話です。しかし、ジョブメドレーアカデミーは別の会社から運営を引き継いだ経緯があり、DB 内の日時データがすでに JST 時間で保存されていました。そのため、JST での保存を継続して運用する必要がありました。
+上記の問題については、本来であれば DB に UTC 時間で保存すれば解決します。しかし、ジョブメドレーアカデミーは別会社から運営を引き継いだ歴史的背景があり、DB 内の日時データがすでに JST 時間で保存されいる状態だったので、JST での保存を継続して運用する必要がありました。
 
 ## どのように対応しているか
 
@@ -72,25 +72,14 @@ prisma.$use(async (params, next) => {
 ```
 
 ::::
-ジョブメドレーアカデミーでは上記のコードを参考に、DB に渡すデータ(where や data など)に Date 型のものが含まれていれば、それに対して **9 時間プラス**し、DB から出力されたデータに Date 型のものが含まれていれば、それに対して **9 時間マイナス**するように、Prisma の middleware を実装しています。
+ジョブメドレーアカデミーでは上記のコードを参考に、Prisma Middleware を実装しています。具体的には、DB に渡すデータ(where や data など)に Date 型のものが含まれていれば、それに対して **9 時間プラス**し、DB から出力されたデータに Date 型のものが含まれていれば、それに対して **9 時間マイナス**するように、Prisma の middleware を実装しています。
 
-イメージとしては以下の図のような感じです。
+以下の図のようなイメージです。
 ![](/images/prisma-upgrade/middleware.png)
-
-# バージョンアップの事前準備
-
-今まで、主要なライブラリのバージョンアップをやった経験がなかったので、どのようなことに気をつけて実施すべきか調べることにしました。
-
-Prisma は公式ドキュメントに [Upgrade guides](https://www.prisma.io/docs/orm/more/upgrade-guides) があり、バージョンアップ時の手順も記載されていて助かりました。
-公式ドキュメントや、前回バージョンアップした PR、チームのメンバーにも助言をもらい、以下に注意して進めることにしました。
-
-- リリースノートを読み、Breaking Change（破壊的変更）や、新しくリリースされた機能を確認する
-- リリース直後のバージョンや、x.x.0 は新しいバグが発見される場合があるため、一つ前のバージョンにしておく
-- `prisma` と `@prisma/client` どちらもバージョンを揃える必要がある
 
 # 今回のバージョンアップで起きた事象
 
-Prisma のバージョンを 5.9.1 から 5.19.1 にあげると`$queryRaw` で取得した 日時データの値に差が出るようになりました。
+Prisma のバージョンを 5.9.1 から 5.19.1 にアップデートすると、`$queryRaw` で取得した日時データの値に差が生じるようになりました。
 
 ```typescript
 const result = await prisma.$queryRaw`
@@ -105,23 +94,22 @@ console.log(result);
 
 # やったこと
 
-## 関係ありそうな箇所を調べる
+## リリースノートを確認する
 
 - `$queryRaw` 以外（`findMany`など）で取得した Date 型の値は変化がなかった
 - `$queryRaw` は middleware を介して Prisma のクエリを実行できない認識だった
-  - したがって DB の日時データがマイナス 9 時間されていない
-- 取得した Date 型の値のちょうど 9 時間差が出ている
+  - したがって DB の日時データを取得した際にマイナス 9 時間されていない
+- `$queryRaw` の結果として返される値に、ちょうど 9 時間のズレが見られた
 
-上記の事実から、バージョンを上げたことで、`$queryRaw`や middleware の挙動に変更があったのではないかと考えました。
-リリースノートを見て、`$queryRaw`や middleware に関係しそうな変更がないか確認しましたが、特に変更点はなさそうでした。
+これらの事実から、バージョンアップによって `$queryRaw` や middleware の挙動が変更された可能性があると考えました。しかし、リリースノートを確認しても該当する変更点は見つかりませんでした。
 
-## `$queryRaw` 実行されている時の流れを確認
+## `$queryRaw` の挙動確認
 
-`$queryRaw`自体が怪しいのは確からしいので、次は呼び出されてからの起きていることを整理することにしました。呼び出し元や PostgreSQL は今回変更ないはずなので、それ以外で影響が出ていそうな箇所にログを追加しました。
+`$queryRaw` に問題がある可能性が高いと考えたため、呼び出しから実行結果が返るまでの流れを整理しました。呼び出し元や PostgreSQL に変更はないはずなので、それ以外の箇所にログを追加して調査を進めました。
 
 ![](/images/prisma-upgrade/flowchart.png =500x)
 
-先ほどの図の`（３）`部分であるクエリ実行結果のログを確認すると 以下のように Prisma のバージョンによって変化していることがわかりました。
+先ほどの図の`（３）`部分に該当するクエリ実行結果のログを確認したところ、Prisma のバージョンによって結果が以下のように変化していることが分かりました。
 
 ```TypeScript
 // 以下を実行
@@ -143,16 +131,17 @@ const result = await prisma.$queryRaw`
 [ { timestamp: 2024-10-01T10:00:00.000Z } ]
 ```
 
-# 何が原因だったか
+# 原因
 
-今回起きた事象は、`$queryRaw`で日時データを取得するクエリを実行した結果が Prisma のバージョンを上げることで文字列型から Date 型に変化し、 middleware 内の 9 時間マイナスしている処理が適応されるようになったことが原因でした。
-また、今まで`$queryRaw` は middleware を介して Prisma のクエリを実行できないと思っていたのは、日時データの返り値が文字列型だったので ９時間マイナスしている処理がスルーされていたためでした。
+今回の事象は、Prisma のバージョンアップにより、`$queryRaw` で日時データを取得するクエリの返り値が **文字列型から Date 型に変化した** ことが原因でした。その結果、middleware 内の 9 時間マイナス処理が有効になり、データにズレが生じました。
+
+また、これまで `$queryRaw` は middleware を介さないと認識していたのは、返り値が文字列型であったため、middleware の処理が適用されていなかったことが理由でした。
 
 # 対応したこと
 
-原因がわかったので、プロダクションコード内で`$queryRaw`で日時データを取得している箇所を確認し修正しました。
+原因がわかったので、プロダクションコード内の `$queryRaw` を使用して日時データを取得している箇所を修正しました。
 
-また今回のバージョンアップで挙動が変わった箇所を今後も検知できるように以下のようなテストコードを追加しました。
+また、今回のバージョンアップで挙動が変わった箇所を今後も検知できるよう、以下のテストコードを追加しました。
 
 ::::details 追加したテストコード
 
