日本語おかしい箇所修正

--- a/articles/ce5ec69b068e3f.md
+++ b/articles/ce5ec69b068e3f.md
@@ -72,12 +72,12 @@ prisma.$use(async (params, next) => {
 ```
 
 ::::
-ジョブメドレーアカデミーでは上記のコードを参考に、Prisma Middleware を実装しています。具体的には、DB に渡すデータ(where や data など)に Date 型のものが含まれていれば、それに対して **9 時間プラス**し、DB から出力されたデータに Date 型のものが含まれていれば、それに対して **9 時間マイナス**するように、Prisma の middleware を実装しています。
+ジョブメドレーアカデミーでは上記のコードを参考に、DB に渡すデータ(where や data など)に Date 型のものが含まれていれば、それに対して **9 時間プラス**し、DB から出力されたデータに Date 型のものが含まれていれば、それに対して **9 時間マイナス**するように、Prisma の middleware を実装しています。
 
 以下の図のようなイメージです。
 ![](/images/prisma-upgrade/middleware.png)
 
-# 今回のバージョンアップで起きた事象
+# バージョンアップで起きた事象
 
 Prisma のバージョンを 5.9.1 から 5.19.1 にアップデートすると、`$queryRaw` で取得した日時データの値に差が生じるようになりました。
 
@@ -105,11 +105,11 @@ console.log(result);
 
 ## `$queryRaw` の挙動確認
 
-`$queryRaw` に問題がある可能性が高いと考えたため、呼び出しから実行結果が返るまでの流れを整理しました。呼び出し元や PostgreSQL に変更はないはずなので、それ以外の箇所にログを追加して調査を進めました。
+リリースノートから収穫はありませんでしたが、`$queryRaw` の挙動に問題がある可能性が高いと考えたため、呼び出しから実行結果が返るまでの流れを整理しました。呼び出し元や PostgreSQL に変更はないはずなので、それ以外の箇所にログを追加して調査を進めました。
 
 ![](/images/prisma-upgrade/flowchart.png =500x)
 
-先ほどの図の`（３）`部分に該当するクエリ実行結果のログを確認したところ、Prisma のバージョンによって結果が以下のように変化していることが分かりました。
+すると、上記の図の`（３）`部分に該当するクエリ実行結果のログが、Prisma のバージョンによって以下のように変化していることが分かりました。
 
 ```TypeScript
 // 以下を実行
@@ -118,7 +118,7 @@ const result = await prisma.$queryRaw`
 `;
 
 // （３）部分のログを確認
-// before: 文字列型の値になっている
+// before: 文字列型の値
 [
   {
     timestamp: {
@@ -135,7 +135,7 @@ const result = await prisma.$queryRaw`
 
 今回の事象は、Prisma のバージョンアップにより、`$queryRaw` で日時データを取得するクエリの返り値が **文字列型から Date 型に変化した** ことが原因でした。その結果、middleware 内の 9 時間マイナス処理が有効になり、データにズレが生じました。
 
-また、これまで `$queryRaw` は middleware を介さないと認識していたのは、返り値が文字列型であったため、middleware の処理が適用されていなかったことが理由でした。
+さらに、これまで `$queryRaw` は middleware を介さないと認識していたのは、返り値が文字列型であったため、middleware の処理が適用されていなかったことが理由でした。
 
 # 対応したこと
 
