--- a/articles/ce5ec69b068e3f.md
+++ b/articles/ce5ec69b068e3f.md
@@ -3,7 +3,7 @@ title: 'Prismaのタイムゾーン問題とバージョンをあげる時にハ
 emoji: '🌏'
 type: 'tech' # tech: 技術記事 / idea: アイデア
 topics: ['prisma']
-published: false
+published: true
 publication_name: 'medley'
 ---
 
